@YELP_HELP_RULES@
HELP_ID = gnome-mines

HELP_MEDIA = \
	figures/easy-hints-1.png \
	figures/easy-hints-2.png \
	figures/easy-hints-3.png \
	figures/flag-question.svg \
	figures/flags.png \
	figures/flag.svg \
	figures/gnome-mines.png \
	figures/hard-hints-1.png \
	figures/hard-hints-2.png \
	figures/hard-hints-3.png \
	figures/logo32.png \
	figures/logo.png \
	figures/main-window.png \
	figures/preferences.png \
	figures/statusbar.png

HELP_FILES = \
	board-size.page \
	bug-filing.page \
	develop.page \
	documentation.page \
	flags.page \
	get-help.page \
	high-scores.page \
	index.page \
	license.page \
	new-game.page \
	rules.page \
	shortcuts.page \
	translate.page

HELP_LINGUAS = ca cs da de el en_GB es eu fr gl hu it ja ko oc pl pt_BR sl sr sr@latin sv zh_CN

-include $(top_srcdir)/git.mk
