@YELP_HELP_RULES@
HELP_ID = gnome-mines

HELP_MEDIA = \
	figures/flag-question.svg \
	figures/flags.png \
	figures/flag.svg \
	figures/logo32.png \
	figures/logo.png

HELP_FILES = \
	board-size.page \
	bug-filing.page \
	develop.page \
	documentation.page \
	flags.page \
	get-help.page \
	high-scores.page \
	index.page \
	license.page \
	new-game.page \
	rules.page \
	shortcuts.page \
	translate.page

HELP_LINGUAS = ca cs da de el en_GB es eu fr gl hu it ja ko oc pl pt_BR sl sr sr@latin sv zh_CN

-include $(top_srcdir)/git.mk
