languages = [ 'ca', 'cs',
              'da', 'de',
              'el', 'en_GB', 'es', 'eu',
              'fr',
              'gl',
              'hu',
              'it',
              'ja',
              'oc',
              'pl', 'pt_BR',
              'sl', 'sr', 'sr@latin', 'sv',
              'zh_CN' ]

gnome.yelp ('gnome-mines',
            sources: [ 'board-size.page',
                       'bug-filing.page',
                       'develop.page',
                       'documentation.page',
                       'flags.page',
                       'get-help.page',
                       'high-scores.page',
                       'index.page',
                       'license.page',
                       'new-game.page',
                       'rules.page',
                       'shortcuts.page',
                       'translate.page' ],
            media: [ 'figures/flag-question.svg',
                     'figures/flags.png',
                     'figures/flag.svg',
                     'figures/logo32.png',
                     'figures/logo.png' ],
            languages: languages,
            symlink_media: true)
