gnome.yelp ('gnome-mines',
            sources: [ 'board-size.page',
                       'bug-filing.page',
                       'develop.page',
                       'documentation.page',
                       'flags.page',
                       'get-help.page',
                       'high-scores.page',
                       'index.page',
                       'license.page',
                       'new-game.page',
                       'rules.page',
                       'shortcuts.page',
                       'translate.page' ],
            media: [ 'figures/flag-question.svg',
                     'figures/flags.png',
                     'figures/flag.svg',
                     'figures/logo32.png',
                     'figures/logo.png' ],
            symlink_media: true)
