gnome.yelp ('gnome-mines',
            sources: [ 'board-size.page',
                       'bug-filing.page',
                       'develop.page',
                       'documentation.page',
                       'flags.page',
                       'high-scores.page',
                       'index.page',
                       'license.page',
                       'new-game.page',
                       'rules.page',
                       'translate.page' ],
            media: [ 'figures/flag-question.svg',
                     'figures/flags.png',
                     'figures/flag.svg',
                     'figures/org.gnome.Mines.svg' ],
            symlink_media: true)
