gnome_mines = executable ('gnome-mines',
                          [ 'config.vapi',
                            'gnome-mines.vala',
                            'minefield.vala',
                            'minefield-view.vala',
                            'tile.vala',
                            'theme-selector-dialog.vala'],
                          dependencies: [ glib_dep,
                                          gee_dep,
                                          gtk_dep,
                                          librsvg_dep,
                                          libgnome_games_support_dep ],
                          vala_args: [ '--pkg=posix' ],
                          c_args: [ '-DVERSION="@0@"'.format (meson.project_version ()),
                                    '-DGETTEXT_PACKAGE="gnome-mines"',
                                    '-DLOCALEDIR="@0@"'.format (localedir),
                                    '-DDATA_DIRECTORY="@0@"'.format (pkgdatadir) ],
                          install: true )
