resources = gnome.compile_resources ('resources', 'gnome-mines.gresource.xml',
                                     source_dir: '.',
                                     c_name: 'resources')

gnome_mines = executable ('gnome-mines',
                          [ 'config.vapi',
                            'window.vala',
                            'gnome-mines.vala',
                            'minefield.vala',
                            'minefield-view.vala',
                            'tile.vala',
                            'theme-selector-dialog.vala'] + resources,
                          dependencies: [ glib_dep,
                                          adw_dep,
                                          gee_dep,
                                          gtk_dep,
                                          librsvg_dep,
                                          libmath_dep,
                                          libgnome_games_support_dep ],
                          vala_args: [ '--pkg=posix' ],
                          c_args: [ '-DVERSION="@0@"'.format (meson.project_version ()),
                                    '-DGETTEXT_PACKAGE="gnome-mines"',
                                    '-DLOCALEDIR="@0@"'.format (localedir),
                                    '-DDATA_DIRECTORY="@0@"'.format (pkgdatadir) ],
                          install: true )
