icon16dir=$(datadir)/icons/hicolor/16x16/apps
icon22dir=$(datadir)/icons/hicolor/22x22/apps
icon24dir=$(datadir)/icons/hicolor/24x24/apps
icon32dir=$(datadir)/icons/hicolor/32x32/apps
icon48dir=$(datadir)/icons/hicolor/48x48/apps
icon256dir=$(datadir)/icons/hicolor/256x256/apps

icon16_DATA = 16x16/gnomine.png
icon22_DATA = 22x22/gnomine.png
icon24_DATA = 24x24/gnomine.png
icon32_DATA = 32x32/gnomine.png
icon48_DATA = 48x48/gnomine.png
icon256_DATA = 256x256/gnomine.png

EXTRA_DIST = $(icon16_DATA) $(icon22_DATA) $(icon24_DATA) $(icon32_DATA) $(icon48_DATA) $(icon256_DATA) $(iconscalable_DATA)
