icon16dir=$(datadir)/icons/hicolor/16x16/apps
icon22dir=$(datadir)/icons/hicolor/22x22/apps
icon24dir=$(datadir)/icons/hicolor/24x24/apps
icon32dir=$(datadir)/icons/hicolor/32x32/apps
icon48dir=$(datadir)/icons/hicolor/48x48/apps
icon256dir=$(datadir)/icons/hicolor/256x256/apps

icon16_DATA = 16x16/gnome-mines.png
icon22_DATA = 22x22/gnome-mines.png
icon24_DATA = 24x24/gnome-mines.png
icon32_DATA = 32x32/gnome-mines.png
icon48_DATA = 48x48/gnome-mines.png
icon256_DATA = 256x256/gnome-mines.png

EXTRA_DIST = $(icon16_DATA) $(icon22_DATA) $(icon24_DATA) $(icon32_DATA) $(icon48_DATA) $(icon256_DATA) $(iconscalable_DATA)

-include $(top_srcdir)/git.mk
