figs = \
	figures/advanced_121_a.png	\
	figures/advanced_121_b.png	\
	figures/advanced_121_c.png	\
	figures/basic-corner.png	\
	figures/basic-flat3.png		\
	figures/basic-wall.png		\
	figures/gnomine-begin-play.png	\
	figures/gnomine-fail.png	\
	figures/gnomine-fresh.png	\
	figures/gnomine-preferences.png	\
	figures/gnomine-won.png
docname = gnome-mines
lang = C
omffile = gnome-mines-C.omf
sgml_ents =
include $(top_srcdir)/sgmldocs.make
dist-hook: app-dist-hook

