icon16dir=$(datadir)/icons/HighContrast/16x16/apps
icon22dir=$(datadir)/icons/HighContrast/22x22/apps
icon24dir=$(datadir)/icons/HighContrast/24x24/apps
icon32dir=$(datadir)/icons/HighContrast/32x32/apps
icon48dir=$(datadir)/icons/HighContrast/48x48/apps
icon256dir=$(datadir)/icons/HighContrast/256x256/apps

dist_icon16_DATA = 16x16/gnome-mines.png
dist_icon22_DATA = 22x22/gnome-mines.png
dist_icon24_DATA = 24x24/gnome-mines.png
dist_icon32_DATA = 32x32/gnome-mines.png
dist_icon48_DATA = 48x48/gnome-mines.png
dist_icon256_DATA = 256x256/gnome-mines.png

-include $(top_srcdir)/git.mk
