themedir   = $(pkgdatadir)/themes/bgcolors
theme_DATA = mine.svg exploded.svg overmine.svg \
            1mines.svg 2mines.svg 3mines.svg 4mines.svg \
            5mines.svg 6mines.svg 7mines.svg 8mines.svg \
            flag.svg maybe.svg theme.css

EXTRA_DIST = ${theme_DATA}

-include $(top_srcdir)/git.mk
